feat: TrajectoryRecoderに軌跡の保存機能（csv/yaml）を追加・launch/params構成を整理
- TrajectoryRecoderクラスに軌跡のcsv/yaml保存機能を追加
- interactive_markers.yamlをparamsディレクトリに移動し内容を拡充
- launchファイル（base_marker, trajectory_recoder）を追加
- CMakeLists.txtにlaunch/paramsディレクトリのインストールを追加
- 軌跡クリア・保存時のデバッグ/INFO出力を強化
- 不要な旧interactive_markers.yamlを削除

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,11 @@ install(TARGETS
   trajectory_recoder
   DESTINATION lib/${PROJECT_NAME})
 
+install(DIRECTORY
+  launch params
+  DESTINATION share/${PROJECT_NAME}
+)
+
 ament_export_targets(export_marker_tools)
 ament_export_dependencies(
   rclcpp
