feat: TreeMap機能の追加と関連ファイルの新規作成
- マーカーのグラフ構造管理・探索・可視化を行うTreeMapクラスを実装
- tree_map.cpp, tree_map.hpp, tree_map.launch.py, tree_map.yamlの新規追加
- CMakeLists.txtにtree_mapノードのビルド・インストール設定を追加
- waypoint_editor.cppの初期化ログを修正

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ include_directories(include)
 add_library(marker_tools
   src/trajectory_recoder.cpp
   src/waypoint_editor.cpp
+  src/tree_map.cpp
 )
 
 ament_target_dependencies(marker_tools
@@ -57,10 +58,20 @@ ament_target_dependencies(waypoint_editor
 )
 target_link_libraries(waypoint_editor marker_tools)
 
+add_executable(tree_map
+  src/node/tree_map.cpp
+)
+ament_target_dependencies(tree_map
+  rclcpp
+  potbot_ros
+)
+target_link_libraries(tree_map marker_tools)
+
 install(TARGETS
   base_marker
   trajectory_recoder
   waypoint_editor
+  tree_map
   DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY
