launchファイル・CMakeLists.txt・rviz設定の修正
- 各launchファイルでrvizノードの追加とyamlファイルパスの修正
- CMakeLists.txtでrvizディレクトリのインストールを追加
- rviz.rvizの表示設定・トピック名・グループ名等を整理
- README.mdを新規追加

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ install(TARGETS
   DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY
-  launch params
+  launch params rviz
   DESTINATION share/${PROJECT_NAME}
 )
 
